update environment variable

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,11 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'http://www.local.com:7001/api'
+
+# VUE_APP_SERVER_API = 'http://localhost:38080'
+
+# VUE_APP_MODE = 'hash'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
