--- a/.env.st
+++ b/.env.st
@@ -2,7 +2,7 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://api.pocplus.com/api'
+VUE_APP_BASE_API = 'http://api.k2pool.com/api'
 
 # VUE_APP_SERVER_API = 'http://localhost:38080'
 
